@@ -1,5 +1,5 @@
 #
-# "$Id: cupsd.conf,v 1.31 2001/03/02 22:33:58 andy Exp $"
+# "$Id: cupsd.conf,v 1.32 2001/03/14 13:45:30 mike Exp $"
 #
 #   Sample configuration file for the Common UNIX Printing System (CUPS)
 #   scheduler.
@@ -70,6 +70,17 @@
 #
 
 #AccessLog /var/log/cups/access_log
+
+#
+# Classification: the classification level of the server.  If set, this
+# classification is displayed on all pages, and raw printing is disabled.
+# The default is the empty string.
+
+#Classification classified
+#Classification confidential
+#Classification secret
+#Classification topsecret
+#Classification unclassified
 
 #
 # DataDir: the root directory for the CUPS data files.
@@ -624,5 +635,5 @@ Allow From 127.0.0.1
 </Location>
 
 #
-# End of "$Id: cupsd.conf,v 1.31 2001/03/02 22:33:58 andy Exp $".
+# End of "$Id: cupsd.conf,v 1.32 2001/03/14 13:45:30 mike Exp $".
 #
